--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="CV/assets/style.css">
     <script src="https://kit.fontawesome.com/6d402694d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="resume">
     <div class="resume_left">
         <div class="resume_profile">
-            <img src="images/profile.jpg" alt="profile_picture" style="width: 280px">
+            <img src="CV/images/profile.jpg" alt="profile_picture" style="width: 280px">
         </div>
         <div class="resume_content">
             <div class="resume_item resume_info">
