--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Qui's CV</title>
     <link rel="stylesheet" href="CV/assets/style.css">
     <script src="https://kit.fontawesome.com/6d402694d7.js" crossorigin="anonymous"></script>
 </head>
@@ -52,36 +52,36 @@
                             HTML
                         </div>
                         <div class="skill_progress">
-                            <span style="width: 10%"></span>
+                            <span style="width: 50%"></span>
                         </div>
-                        <div class="skill_per">10%</div>
+                        <div class="skill_per">50%</div>
                     </li>
                     <li>
                         <div class="skill_name">
                             CSS
                         </div>
                         <div class="skill_progress">
-                            <span style="width: 80%"></span>
+                            <span style="width: 40%"></span>
                         </div>
-                        <div class="skill_per">80%</div>
+                        <div class="skill_per">40%</div>
                     </li>
                     <li>
                         <div class="skill_name">
                             JS
                         </div>
                         <div class="skill_progress">
-                            <span style="width: 80%"></span>
+                            <span style="width: 30%"></span>
                         </div>
-                        <div class="skill_per">80%</div>
+                        <div class="skill_per">30%</div>
                     </li>
                     <li>
                         <div class="skill_name">
                             JQUERY
                         </div>
                         <div class="skill_progress">
-                            <span style="width: 80%"></span>
+                            <span style="width: 10%"></span>
                         </div>
-                        <div class="skill_per">80%</div>
+                        <div class="skill_per">10%</div>
                     </li>
                 </ul>
             </div>
@@ -120,8 +120,9 @@
             <div class="title">
                 <p class="bold">Thông tin bản thân</p>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eveniet fugiat harum nisi quae quasi
-                saepe. Dolores ea eum ex, odio ratione reprehenderit sunt vero!</p>
+            <p>Là một người thích tìm tòi,học hỏi, thích giao tiếp, và nhiệt tình trong công việc</p>
+            <br>
+            <p></p>
         </div>
         <div class="resume_item resume_work">
             <div class="title">
@@ -131,33 +132,29 @@
                 <li>
                     <div class="date">2014-2017</div>
                     <div class="info">
-                        <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, numquam quas? Deserunt dolorem
-                            officia sed.</p>
+                        <p class="semi-bold">Công ty Cổ phần Phước Hiệp Thành</p>
+                        <p>Chức vụ: Nhân viên kế hoạch</p>
                     </div>
                 </li>
                 <li>
                     <div class="date">2017-2018</div>
                     <div class="info">
-                        <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, numquam quas? Deserunt dolorem
-                            officia sed.</p>
+                        <p class="semi-bold">Nhà hàng Barapub</p>
+                        <p>Chức vụ: Quản lí nhà hàng</p>
                     </div>
                 </li>
                 <li>
                     <div class="date">2018-2019</div>
                     <div class="info">
-                        <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, numquam quas? Deserunt dolorem
-                            officia sed.</p>
+                        <p class="semi-bold">Shinhan Finance</p>
+                        <p>Chức vụ: Nhân viên kinh doanh</p>
                     </div>
                 </li>
                 <li>
                     <div class="date">2019-Hiện tại</div>
                     <div class="info">
-                        <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, numquam quas? Deserunt dolorem
-                            officia sed.</p>
+                        <p class="semi-bold">CodeGym Huế</p>
+                        <p>Chức vụ: Học viên</p>
                     </div>
                 </li>
             </ul>
@@ -170,9 +167,11 @@
                 <li>
                     <div class="date">2020</div>
                     <div class="info">
-                        <p class="semi_bold">Lập trình ngôn ngữ PHP</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At atque incidunt iure quaerat vel,
-                            voluptates!</p>
+                        <p class="semi_bold">CodeGym Huế</p>
+                        <p>Khóa học PHP Bootcamp</p>
+                        <p>Học cách học</p>
+                        <p>Hoàn thành mọi việc với Kanban</p>
+                        <p>Scum Essence</p>
                     </div>
                 </li>
             </ul>
