--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <link rel="shortcut icon" href="assets/img/short-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/short-icon.png" type="image/x-icon">
 
     <!-- ==== CSS====== -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body  >
 
@@ -73,7 +73,7 @@
             <section class="home" id="home">
                 <div class="home__container section bd-grid">
                     <div class="home__data bd-grid">
-                         <img src="/assets/img/avatar.jpg" alt="" class="home__img">
+                         <img src="./assets/img/avatar.jpg" alt="" class="home__img">
                     
                          <h1 class="home__title"><b>HOÀNG NGỌC QUÍ</b></h1>
 
