--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <div class="experience__data bd-grid">
                             <h3 class="experience__title">Nhân viên kế hoạch</h3>
                             
-                            <span class="experience__company">2014-2017 | Công Ty CP Phước Hiệp Thành</span>
+                            <span class="experience__company">2014-2019 | Công Ty CP Phước Hiệp Thành</span>
 
                             <p class="experience__description">
                                 - Quản lí công nhân.
@@ -209,26 +209,16 @@
                     </div>
                     <div class="experience__content">
                         <div class="experience__data bd-grid">
-                            <h3 class="experience__title">Quản lí nhà hàng</h3>
+                            <h3 class="experience__title">Học viên Codegym</h3>
 
-                            <span class="experience__company">2017-2018 | Nhà hàng Barapub</span>
+                            <span class="experience__company">2020-Hiện tại | Trung tâm Codegym</span>
 
                             <p class="experience__description">
-                                - Quản lí nhà hàng.
+                                - Học viên PHP bootcamp.
                             </p>
                         </div>
                     </div>
-                    <div class="experience__content">
-                        <div class="experience__data bd-grid">
-                            <h3 class="experience__title">Nhân viên kinh doanh</h3>
-
-                            <span class="experience__company">2018-2019 | Shinhan Finance</span>
-
-                            <p class="experience__description">
-                                - Telesale, direct sale.
-                            </p>
-                        </div>
-                    </div>
+                   
                 </div>
             </section>
 
